new doc Grid WIP

--- a/docs/Components/Other Component/Grid/1. description.md
+++ b/docs/Components/Other Component/Grid/1. description.md
@@ -90,8 +90,12 @@ $this->cols = array(
 }
 ```
 
-# Параметры массива $default
+# Параметры массива default
+*Путь к файлу config: Папка проекта/config/grid.config.php* <br/>
+Массив **default** собрал в себе все значения заданные по умолчанию для работы с компонентом **Grid**.
+
 ## Список параметров (col)
+*Определяет работу со столбцами в таблице*
 
 ### title
 Заголовок столбца таблицы
@@ -104,18 +108,34 @@ $this->cols = array(
 # По умолчанию title = '';
 ```
 
-### label (Скрытый)
-Параметр `label` используется для выбора текста placeholder по умолчанию.
+### type
+Тип поля таблицы
+``` php
+'Имя столбца' => array(
+    'title' => 'Ваш заголовок для столбца',
+    ...
+),
+
+# По умолчанию title = '';
+```
+
+### label
+Параметр `label` используется для выбора текста *placeholder* по умолчанию.
 Параметры `label` основаны на типах поддерживаемых полей ввода и выбора.
 Для того что бы задать текст `label` необходимо указать тип поля через
 параметр `type` используя значения `input`, `select`, `date_range`, 
-`actions`.
+`actions` или задать `label` в ручную.
 Добавляя свои типы в grid.config.php можно добавлять или изменять значения текста для `label`.
+Если `type` задан то по умолчанию для `label` будет использован тип поля указанного в `type`.
+Если задан `type` и `label` будет использовано значение указанное в `label` игнорируя `type`.
 Если `type` не задан то по умолчанию для `label` будет использован тип поля `input`. 
 
 ``` php
 'Имя столбца' => array(
     'type' => 'Тип вашего поля',
+    ...
+    # или
+    'label' => 'Тект вашего Label',
     ...
 ),
 
@@ -124,7 +144,6 @@ $this->cols = array(
 'select' => 'Выбрать',
 'date_range' => 'Выбрать дату',
 'actions' => 'Действия',
-
 ```
 
 ### render
@@ -151,8 +170,16 @@ $this->cols = array(
 ``` php
 ```
 
-### d_format_date
+### format_date - *Формат даты*
+Параметр <c>`format_date`</c> может быть использован для полей с <c>`type`</c> **date_range**
+
 ``` php
+'Имя столбца' => array(
+    'format_date' => 'Формат даты в формате d.m.Y',
+    ...
+),
+
+# По умолчанию format_date = 'd.m.Y';
 ```
 
 ### manual
