--- a/docs/Components/Other Component/Grid/1. description.md
+++ b/docs/Components/Other Component/Grid/1. description.md
@@ -11,7 +11,8 @@ title: Описание
 
 ### Определение {#definition}
 
-Таблицы — это динамический элемент системы позволяющий генерировать и выводить таблицы с данными в реальном времени. Что в свою очередь позволяет работать и управлять большим кол-вом данных и создавать места взаимодействия с данными на страницах модулей.
+**Списки (Grids)** — это динамический элемент системы позволяющий генерировать и выводить таблицы с данными в реальном времени. 
+Что в свою очередь позволяет работать и управлять большим кол-вом данных и создавать места взаимодействия с данными на страницах модулей.
 
 ### Принципы {#principles}
 
@@ -97,6 +98,11 @@ $this->cols = array(
 ## Список параметров (col)
 *Определяет работу со столбцами в таблице*
 
+:::tip Совет
+Типы полей используется как фильтры для формирования значений по умолчанию.<br/>
+Доступные типы `input`, `select`, `date_range`, `actions`
+:::
+
 ### title
 Заголовок столбца таблицы
 ``` php
@@ -109,10 +115,12 @@ $this->cols = array(
 ```
 
 ### type
-Тип поля таблицы
+Параметр <c>`type`</c> определяет тип столбца таблицы. 
+Используется для формирования полей поиска и сортировки со всеми привязанными параметрами к данному типу поля.
+
 ``` php
 'Имя столбца' => array(
-    'title' => 'Ваш заголовок для столбца',
+    'type' => 'Тип вашего поля',
     ...
 ),
 
@@ -120,15 +128,17 @@ $this->cols = array(
 ```
 
 ### label
-Параметр `label` используется для выбора текста *placeholder* по умолчанию.
-Параметры `label` основаны на типах поддерживаемых полей ввода и выбора.
-Для того что бы задать текст `label` необходимо указать тип поля через
-параметр `type` используя значения `input`, `select`, `date_range`, 
-`actions` или задать `label` в ручную.
-Добавляя свои типы в grid.config.php можно добавлять или изменять значения текста для `label`.
-Если `type` задан то по умолчанию для `label` будет использован тип поля указанного в `type`.
-Если задан `type` и `label` будет использовано значение указанное в `label` игнорируя `type`.
-Если `type` не задан то по умолчанию для `label` будет использован тип поля `input`. 
+Параметр <c>`label`</c> используется для выбора текста *placeholder* по умолчанию и основан на 
+типах поддерживаемых полей ввода и выбора.
+
+Для того что бы задать текст <c>`label`</c> необходимо указать тип поля через
+параметр <c>`type`</c> используя значения `input`, `select`, `date_range`,`actions` 
+или задать <c>`label`</c> в ручную.
+
+Добавляя свои типы в grid.config.php можно добавлять или изменять значения текста для <c>`label`</c>.<br/>
+Если <c>`type`</c> задан то по умолчанию для <c>`label`</c> будет использован тип поля указанного в <c>`type`</c>.<br/>
+Если задан <c>`type`</c> и <c>`label`</c> будет использовано значение указанное в <c>`label`</c> игнорируя <c>`type`</c>.<br/>
+Если <c>`type`</c> не задан то по умолчанию для <c>`label`</c> будет использован тип поля `input`. 
 
 ``` php
 'Имя столбца' => array(
@@ -139,7 +149,7 @@ $this->cols = array(
     ...
 ),
 
-# По умолчанию
+# По умолчанию по типам
 'input' => 'Найти',
 'select' => 'Выбрать',
 'date_range' => 'Выбрать дату',
@@ -147,7 +157,14 @@ $this->cols = array(
 ```
 
 ### render
+Параметр render определяет каким образом обернуть выводимые данные в полях таблицы.
+К примеру для очень длинного текста, что-бы избежать чрезмерного "растягивания" одного из столбцов таблицы можно использовать
+render = text что создает обертку для выводимого значения скрывающую часть текста который выходить за ширины самого столбца за "..."
+
+Для render можно использовать tooltip что бы увидеть весь текст во всплывающей подсказке. 
+
 ``` php
+
 ```
 
 ### db
@@ -170,8 +187,9 @@ $this->cols = array(
 ``` php
 ```
 
-### format_date - *Формат даты*
-Параметр <c>`format_date`</c> может быть использован для полей с <c>`type`</c> **date_range**
+### format_date
+Параметр <c>`format_date`</c> может быть использован для полей с <c>`type`</c> **date_range** 
+в качестве шаблона формата даты.
 
 ``` php
 'Имя столбца' => array(
@@ -179,7 +197,8 @@ $this->cols = array(
     ...
 ),
 
-# По умолчанию format_date = 'd.m.Y';
+# По умолчанию по типам
+# 'date_range' => 'd.m.Y'
 ```
 
 ### manual
@@ -187,6 +206,7 @@ $this->cols = array(
 ```
 
 ### visible
+Параметр <c>`visible`</c> определяет видимость столбца.
 ``` php
 ```
 
@@ -211,7 +231,17 @@ $this->cols = array(
 ```
 
 ### tooltip
+Подсказки для полей с render.
+
 ``` php
+'Имя столбца' => array(
+    'render' => 'Тип render',
+    'tooltip' => true,
+    ...
+),
+
+По умолчанию 
+'tooltip' => null
 ```
 
 ### width
@@ -227,7 +257,22 @@ $this->cols = array(
 ```
 
 ### icon
+Параметр <c>`icon`</c> задает иконку для типа поля по умолчанию.
+Иконки можно задать передав в <c>`icon`</c> значение иконки равное набору иконок *feather* 
+или указать свой css класс наборов подключенных через css. 
+
 ``` php
+'Имя столбца' => array(
+    'type' => 'Тип вашего поля',
+    # или
+    'icon' => 'settings', // набор feather
+    # или
+    'icon' => 'fa-light fa-users', // набор Font Awesome
+    ...
+),
+
+# По умолчанию по типам
+# 'actions' => 'settings'
 ```
 
 ### null
