--- a/docs/Components/Other Component/Grid/1. description.md
+++ b/docs/Components/Other Component/Grid/1. description.md
@@ -111,7 +111,7 @@ $this->cols = array(
     ...
 ),
 
-# По умолчанию title = '';
+# По умолчанию title => '';
 ```
 
 ### type (WIP)
@@ -124,7 +124,7 @@ $this->cols = array(
     ...
 ),
 
-# По умолчанию title = '';
+# По умолчанию type => 'input';
 ```
 
 ### label (WIP)
