--- a/docs/Components/Other Component/Grid/0. quick-start.md
+++ b/docs/Components/Other Component/Grid/0. quick-start.md
@@ -2,15 +2,85 @@
 title: Быстрый старт
 ---
 
+
+- [Структура папок](#folder-structure)
 - [Примеры кода](#code-samples)
+
+Использование Grid в своем модуле
+
+### Структура папок {#folder-structure}
+
+```
+ - usr
+    - modules
+        - {module-name}
+            - UI
+                - WEB
+                   - Grids
+                      - *Имя контроллера*.php
+                      - ...
+```
 
 ### Примеры кода {#code-samples}
 
-Создание контроллера
+#### Создание контроллера
 ```php
-class GridControllerName extends GridModern
+namespace *Папка модуля*\UI\WEB\Grids;
+
+use Boot\System\Grid\GridModern;
+
+class *Имя контроллера* extends GridModern 
 {
     
+# Тип подключение к базе данных
+protected $db_type = 'db';
+
+# Пространство имен
+protected $namespace = 'support';
+
+# Действие на двойной клик
+protected $opts_type = "open";
+
+# Получение URL на открытие записи по двойному клику
+protected function getOpenUrl()
+{
+    return route("admin.support.show", ["id" => "@id"]);
+}
+
+protected function init()
+{
+    // Заголовок таблицы
+    $this->title = "Заголовок таблицы";
+
+    // Опции таблицы (в данном случае сортировка)
+    $this->options = array(
+        'sort_name' => 'numb',
+        'sort_order' => 'DESC',
+    );
+
+    // Опции панели навигации
+    $this->nav = array(
+        'excel' => true,
+        'exceltext' => __('grid.export.excel'),
+        'trash' => true,
+        'trashtype' => 'null',
+        'trashtext' => __('grid.trash.show'),
+        'trashfield' => $this->namespace . '.deleted_at',
+    );
+
+    // Подключение к необходимой таблице
+    $this->db = DB::table($this->namespace);
+
+    // Настройка колонок
+    $this->cols = array(
+        ...
+    );
+    
+    // 
+    $this->render_filter_toolbar = true;
+}
+
+
 }
 ```
 
