--- a/docs/Components/Other Component/Grid/0. quick-start.md
+++ b/docs/Components/Other Component/Grid/0. quick-start.md
@@ -2,11 +2,10 @@
 title: Быстрый старт
 ---
 
-
 - [Структура папок](#folder-structure)
 - [Примеры кода](#code-samples)
 
-Использование Grid в своем модуле
+## Использование Grid в своем модуле
 
 ### Структура папок {#folder-structure}
 
@@ -24,6 +23,7 @@ title: Быстрый старт
 ### Примеры кода {#code-samples}
 
 #### Создание контроллера
+
 ```php
 namespace *Папка модуля*\UI\WEB\Grids;
 
