--- a/docs/Components/Other Component/Grid/0. quick-start.md
+++ b/docs/Components/Other Component/Grid/0. quick-start.md
@@ -38,14 +38,7 @@ protected $db_type = 'db';
 # Пространство имен
 protected $namespace = 'support';
 
-# Действие на двойной клик
-protected $opts_type = "open";
 
-# Получение URL на открытие записи по двойному клику
-protected function getOpenUrl()
-{
-    return route("admin.support.show", ["id" => "@id"]);
-}
 
 protected function init()
 {
@@ -57,6 +50,9 @@ protected function init()
         'sort_name' => 'numb',
         'sort_order' => 'DESC',
     );
+
+    // Действия Кликов по строкам (Не обязательный)
+    // $this->clicks = config($this->namespace . '-config.grid.clicks');
 
     // Опции панели навигации
     $this->nav = array(
