--- a/docs/Components/Other Component/Grid/0. quick-start.md
+++ b/docs/Components/Other Component/Grid/0. quick-start.md
@@ -51,8 +51,8 @@ protected function init()
         'sort_order' => 'DESC',
     );
 
-    // Действия Кликов по строкам (Не обязательный)
-    // $this->clicks = config($this->namespace . '-config.grid.clicks');
+    // Действия мыши по строкам (Не обязательный)
+    // $this->mouse = config($this->namespace . '-config.grid.mouse');
 
     // Опции панели навигации
     $this->nav = array(
