--- a/docs/Components/Other Component/Grid/1. description.md
+++ b/docs/Components/Other Component/Grid/1. description.md
@@ -207,7 +207,7 @@ $this->cols = array(
     ...
 ),
 
-# По умолчанию по типам
+# По умолчанию по типам (Задается в config файле grid.config.php)
 # 'date_range' => 'd.m.Y'
 ```
 
@@ -252,7 +252,8 @@ $this->cols = array(
 Подсказки для полей с **render**.
 
 :::tip Совет
-Не используйте **tooltip** вместе с render если выводится теги *html*. Только для обычного текста!
+Не используйте **tooltip** вместе с **render** если выводится теги *html*. Только для обычного текста! <br/>
+Для *html* используйте **popover**.
 :::
 
 ``` php
@@ -264,6 +265,24 @@ $this->cols = array(
 
 # По умолчанию 
 'tooltip' => null
+```
+
+### popover (WIP)
+Всплывающие окна для полей с **render**. Является более универсальным способом вывода уведомлений.
+
+:::tip Совет
+Используйте **popover** вместе с **render** если выводится теги *html*.
+:::
+
+``` php
+'Имя столбца' => array(
+    'render' => 'Тип render',
+    'popover' => true,
+    ...
+),
+
+# По умолчанию 
+'popover' => null
 ```
 
 ### width
