--- a/docs/Components/Other Component/Grid/1. description.md
+++ b/docs/Components/Other Component/Grid/1. description.md
@@ -220,7 +220,7 @@ $this->cols = array(
 
 ``` php
 'Имя столбца' => array(
-    'visible' => true || false,
+    'visible' => bool, // true || false
     ...
 ),
 
