--- a/docs/Components/Other Component/Grid/1. description.md
+++ b/docs/Components/Other Component/Grid/1. description.md
@@ -63,11 +63,13 @@ $this->title = 'Заголовок таблицы';
 
 // Опции таблицы (в данном случае сортировка)
 $this->options = array(
-    'sort_name' => 'numb',
-    'sort_order' => 'DESC',
+    'sort' => [
+        'name' => 'id',
+        'order' => 'DESC'
+    ],
 );
 
-// Опции панели навигации
+// Опции панели навигации (WIP)
 $this->nav = array(
     'excel' => true,
     'exceltext' => __('grid.export.excel'),
@@ -87,8 +89,6 @@ $this->cols = array(
     ),
     ...
 );
-
-}
 ```
 
 # Параметры массива default
@@ -114,20 +114,28 @@ $this->cols = array(
 # По умолчанию title => '';
 ```
 
-### type (WIP)
-Параметр <c>`type`</c> определяет тип столбца таблицы. 
+### type
+Параметр <c>`type`</c> определяет тип столбца таблицы.
 Используется для формирования полей поиска и сортировки со всеми привязанными параметрами к данному типу поля.
 
 ``` php
 'Имя столбца' => array(
-    'type' => 'Тип вашего поля',
+    'type' => 'Тип вашего столбца',
     ...
 ),
+
+# Доступные привязанные поля для type:
+'input' - Стандартное поле поиска input
+'select' - Вытадающий список на select
+'select2' - Вытадающий список на select2 (WIP)
+'date' - Поле выбора конкретной даты (WIP)
+'date_range' - Поле выбора диапазона дат (ОТ - ДО)
+'actions' - Столбец с кнопками дейсвий
 
 # По умолчанию type => 'input';
 ```
 
-### label (WIP)
+### label
 Параметр <c>`label`</c> используется для выбора текста **placeholder** по умолчанию и основан на 
 типах поддерживаемых полей ввода и выбора.
 
@@ -135,21 +143,18 @@ $this->cols = array(
 параметр <c>`type`</c> используя значения `input`, `select`, `date_range`,`actions` 
 или задать <c>`label`</c> в ручную.
 
-Добавляя свои типы в файл **grid.config.php** можно добавлять или изменять значения текста для <c>`label`</c>.<br/>
+Добавляя свои типы в файл **grid.config.php** можно использовать и изменять значения текста для <c>`label`</c>.<br/>
 Если <c>`type`</c> задан то по умолчанию для <c>`label`</c> будет использован тип поля указанного в <c>`type`</c>.<br/>
 Если задан <c>`type`</c> и <c>`label`</c> будет использовано значение указанное в <c>`label`</c> игнорируя <c>`type`</c>.<br/>
 Если <c>`type`</c> не задан то по умолчанию для <c>`label`</c> будет использован тип поля `input`. 
 
 ``` php
 'Имя столбца' => array(
-    'type' => 'Тип вашего поля',
-    ...
-    # или
-    'label' => 'Тект вашего Label',
+    'label' => 'Тект вашего label',
     ...
 ),
 
-# По умолчанию по типам
+# По умолчанию текст по типам
 'input' => 'Найти',
 'select' => 'Выбрать',
 'date_range' => 'Выбрать дату',
